web_ec2.tf

resource "aws_instance" "web_instance" {
  count = 2
  ami                         = var.ami
  instance_type               = var.instance_type
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  subnet_id                   = aws_subnet.public_subnet[count.index].id
  associate_public_ip_address = true
  user_data                   = file("scripts/user_data.sh")
  tags = {
    Name = "web_instance_${count.index}"
  }
}


resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.rg_vpc.id
  tags = {
    Name = "web_sg"
  }
}

resource "aws_security_group_rule" "allow_trafic_from_anywhere" {
  type              = "ingress"
  from_port         = "80"
  to_port           = "80"
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb_sg.id
  description       = "allow trafic from anywhere to the load balancer"
}

resource "aws_security_group_rule" "allow_trafic_to_anywhere" {
  type              = "egress"
  from_port         = "0"
  to_port           = "0"
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.web_sg.id
}
